// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DashboardLayoutBuilder > .addSection() > should create a section at the end of the layout by default > after 1`] = `
{
  "sections": [
    {
      "header": {
        "title": "Initial section",
      },
      "items": [],
      "type": "IDashboardLayoutSection",
    },
    {
      "header": {
        "title": "Added section",
      },
      "items": [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .addSection() > should create a section at the end of the layout by default > before 1`] = `
{
  "sections": [
    {
      "header": {
        "title": "Initial section",
      },
      "items": [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .addSection() > should create a section at the provided index > after 1`] = `
{
  "sections": [
    {
      "header": {
        "title": "Section 1",
      },
      "items": [],
      "type": "IDashboardLayoutSection",
    },
    {
      "header": {
        "title": "Added section",
      },
      "items": [],
      "type": "IDashboardLayoutSection",
    },
    {
      "header": {
        "title": "Section 2",
      },
      "items": [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .addSection() > should create a section at the provided index > before 1`] = `
{
  "sections": [
    {
      "header": {
        "title": "Section 1",
      },
      "items": [],
      "type": "IDashboardLayoutSection",
    },
    {
      "header": {
        "title": "Section 2",
      },
      "items": [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .createSection() > should create a section at the end of the layout by default > after 1`] = `
{
  "sections": [
    {
      "items": [],
      "type": "IDashboardLayoutSection",
    },
    {
      "header": {
        "title": "Added section",
      },
      "items": [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .createSection() > should create a section at the end of the layout by default > before 1`] = `
{
  "sections": [
    {
      "items": [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .createSection() > should create a section at the provided index > after 1`] = `
{
  "sections": [
    {
      "items": [],
      "type": "IDashboardLayoutSection",
    },
    {
      "header": {
        "title": "Added section",
      },
      "items": [],
      "type": "IDashboardLayoutSection",
    },
    {
      "items": [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .createSection() > should create a section at the provided index > before 1`] = `
{
  "sections": [
    {
      "items": [],
      "type": "IDashboardLayoutSection",
    },
    {
      "items": [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .modifySection() > should modify the section > after 1`] = `
{
  "sections": [
    {
      "header": {
        "title": "Modified section",
      },
      "items": [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .modifySection() > should modify the section > before 1`] = `
{
  "sections": [
    {
      "header": {
        "title": "Original section",
      },
      "items": [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .modifySection() > should throw error, when the section at provided index does not exist 1`] = `"Cannot modify the section - section at index 0 does not exist."`;

exports[`DashboardLayoutBuilder > .modifySections() > should modify all sections by default > after 1`] = `
{
  "sections": [
    {
      "header": {
        "title": "Modified section 0",
      },
      "items": [],
      "type": "IDashboardLayoutSection",
    },
    {
      "header": {
        "title": "Modified section 1",
      },
      "items": [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .modifySections() > should modify all sections by default > before 1`] = `
{
  "sections": [
    {
      "items": [],
      "type": "IDashboardLayoutSection",
    },
    {
      "items": [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .modifySections() > should modify selected section only > after 1`] = `
{
  "sections": [
    {
      "items": [],
      "type": "IDashboardLayoutSection",
    },
    {
      "header": {
        "title": "Modified section",
      },
      "items": [],
      "type": "IDashboardLayoutSection",
    },
    {
      "items": [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .modifySections() > should modify selected section only > before 1`] = `
{
  "sections": [
    {
      "items": [],
      "type": "IDashboardLayoutSection",
    },
    {
      "header": {
        "title": "Original section",
      },
      "items": [],
      "type": "IDashboardLayoutSection",
    },
    {
      "items": [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .modifySections() > should modify selected sections only > after 1`] = `
{
  "sections": [
    {
      "header": {
        "title": "Modified section 0",
      },
      "items": [],
      "type": "IDashboardLayoutSection",
    },
    {
      "items": [],
      "type": "IDashboardLayoutSection",
    },
    {
      "header": {
        "title": "Modified section 2",
      },
      "items": [],
      "type": "IDashboardLayoutSection",
    },
    {
      "items": [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .modifySections() > should modify selected sections only > before 1`] = `
{
  "sections": [
    {
      "header": {
        "title": "Original section",
      },
      "items": [],
      "type": "IDashboardLayoutSection",
    },
    {
      "items": [],
      "type": "IDashboardLayoutSection",
    },
    {
      "header": {
        "title": "Original section",
      },
      "items": [],
      "type": "IDashboardLayoutSection",
    },
    {
      "items": [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .modifySections() > should not modify any section, when selection result is undefined > after 1`] = `
{
  "sections": [
    {
      "items": [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .modifySections() > should not modify any section, when selection result is undefined > before 1`] = `
{
  "sections": [
    {
      "items": [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .moveSection() > should move the section > after 1`] = `
{
  "sections": [
    {
      "header": {
        "title": "Row 1",
      },
      "items": [],
      "type": "IDashboardLayoutSection",
    },
    {
      "header": {
        "title": "Row 0",
      },
      "items": [],
      "type": "IDashboardLayoutSection",
    },
    {
      "header": {
        "title": "Row 2",
      },
      "items": [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .moveSection() > should move the section > before 1`] = `
{
  "sections": [
    {
      "header": {
        "title": "Row 0",
      },
      "items": [],
      "type": "IDashboardLayoutSection",
    },
    {
      "header": {
        "title": "Row 1",
      },
      "items": [],
      "type": "IDashboardLayoutSection",
    },
    {
      "header": {
        "title": "Row 2",
      },
      "items": [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .moveSection() > should throw error, when the section at provided index does not exist 1`] = `"Cannot move the section - section at index 0 does not exist."`;

exports[`DashboardLayoutBuilder > .removeSection() > should remove the section from the layout > after 1`] = `
{
  "sections": [],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .removeSection() > should remove the section from the layout > before 1`] = `
{
  "sections": [
    {
      "header": {
        "title": "Row to remove",
      },
      "items": [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .removeSection() > should throw error, when the section at provided index does not exist 1`] = `"Cannot remove the section - section at index 0 does not exist."`;

exports[`DashboardLayoutBuilder > .removeSections() > should not remove any section, when selection result is undefined > after 1`] = `
{
  "sections": [
    {
      "items": [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .removeSections() > should not remove any section, when selection result is undefined > before 1`] = `
{
  "sections": [
    {
      "items": [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .removeSections() > should remove all sections by default > after 1`] = `
{
  "sections": [],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .removeSections() > should remove all sections by default > before 1`] = `
{
  "sections": [
    {
      "items": [],
      "type": "IDashboardLayoutSection",
    },
    {
      "items": [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .removeSections() > should remove selected section only > after 1`] = `
{
  "sections": [
    {
      "items": [],
      "type": "IDashboardLayoutSection",
    },
    {
      "items": [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .removeSections() > should remove selected section only > before 1`] = `
{
  "sections": [
    {
      "items": [],
      "type": "IDashboardLayoutSection",
    },
    {
      "header": {
        "title": "Row to remove",
      },
      "items": [],
      "type": "IDashboardLayoutSection",
    },
    {
      "items": [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .removeSections() > should remove selected sections only > after 1`] = `
{
  "sections": [
    {
      "header": {
        "title": "Row to keep 1",
      },
      "items": [],
      "type": "IDashboardLayoutSection",
    },
    {
      "header": {
        "title": "Row to keep 2",
      },
      "items": [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .removeSections() > should remove selected sections only > before 1`] = `
{
  "sections": [
    {
      "header": {
        "title": "Row to keep 1",
      },
      "items": [],
      "type": "IDashboardLayoutSection",
    },
    {
      "items": [],
      "type": "IDashboardLayoutSection",
    },
    {
      "header": {
        "title": "Row to keep 2",
      },
      "items": [],
      "type": "IDashboardLayoutSection",
    },
    {
      "items": [],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .size() > should update size by callback 1`] = `
{
  "sections": [],
  "size": {
    "gridWidth": 12,
    "heightAsRatio": 50,
  },
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .size() > should update size by callback returning undefined 1`] = `
{
  "sections": [],
  "size": undefined,
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .size() > should update size by undefined 1`] = `
{
  "sections": [],
  "size": undefined,
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > .size() > should update size by value 1`] = `
{
  "sections": [],
  "size": {
    "gridWidth": 12,
    "heightAsRatio": 50,
  },
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > constructors > .for() > should throw error, when the layout is damaged 1`] = `"Provided data must be IDashboardLayout."`;

exports[`DashboardLayoutBuilder > constructors > .forNewLayout() > should create new empty layout 1`] = `
{
  "sections": [],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > should remove all items with kpi widget > after 1`] = `
{
  "sections": [
    {
      "items": [
        {
          "size": {
            "xl": {
              "gridWidth": 12,
              "heightAsRatio": 50,
            },
          },
          "type": "IDashboardLayoutItem",
          "widget": {
            "description": "",
            "drills": [],
            "ignoreDashboardFilters": [],
            "insight": {
              "identifier": "insightRef",
            },
            "ref": {
              "identifier": "insightWidget",
            },
            "title": "Insight widget",
            "type": "insight",
          },
        },
      ],
      "type": "IDashboardLayoutSection",
    },
    {
      "items": [
        {
          "size": {
            "xl": {
              "gridWidth": 12,
              "heightAsRatio": 50,
            },
          },
          "type": "IDashboardLayoutItem",
          "widget": {
            "description": "",
            "drills": [],
            "ignoreDashboardFilters": [],
            "insight": {
              "identifier": "insightRef",
            },
            "ref": {
              "identifier": "insightWidget",
            },
            "title": "Insight widget",
            "type": "insight",
          },
        },
      ],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > should remove all items with kpi widget > before 1`] = `
{
  "sections": [
    {
      "items": [
        {
          "size": {
            "xl": {
              "gridWidth": 12,
              "heightAsRatio": 50,
            },
          },
          "type": "IDashboardLayoutItem",
          "widget": {
            "description": "",
            "drills": [],
            "ignoreDashboardFilters": [],
            "insight": {
              "identifier": "insightRef",
            },
            "ref": {
              "identifier": "insightWidget",
            },
            "title": "Insight widget",
            "type": "insight",
          },
        },
        {
          "size": {
            "xl": {
              "gridWidth": 12,
              "heightAsRatio": 50,
            },
          },
          "type": "IDashboardLayoutItem",
          "widget": {
            "description": "",
            "drills": [],
            "ignoreDashboardFilters": [],
            "kpi": {
              "comparisonType": "none",
              "metric": {
                "identifier": "measure",
              },
            },
            "ref": {
              "identifier": "kpiWidget",
            },
            "title": "Kpi widget",
            "type": "kpi",
          },
        },
      ],
      "type": "IDashboardLayoutSection",
    },
    {
      "items": [
        {
          "size": {
            "xl": {
              "gridWidth": 12,
              "heightAsRatio": 50,
            },
          },
          "type": "IDashboardLayoutItem",
          "widget": {
            "description": "",
            "drills": [],
            "ignoreDashboardFilters": [],
            "kpi": {
              "comparisonType": "none",
              "metric": {
                "identifier": "measure",
              },
            },
            "ref": {
              "identifier": "kpiWidget",
            },
            "title": "Kpi widget",
            "type": "kpi",
          },
        },
      ],
      "type": "IDashboardLayoutSection",
    },
    {
      "items": [
        {
          "size": {
            "xl": {
              "gridWidth": 12,
              "heightAsRatio": 50,
            },
          },
          "type": "IDashboardLayoutItem",
          "widget": {
            "description": "",
            "drills": [],
            "ignoreDashboardFilters": [],
            "insight": {
              "identifier": "insightRef",
            },
            "ref": {
              "identifier": "insightWidget",
            },
            "title": "Insight widget",
            "type": "insight",
          },
        },
      ],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > should resize items with particular insight > after 1`] = `
{
  "sections": [
    {
      "items": [
        {
          "size": {
            "xl": {
              "gridWidth": 2,
              "heightAsRatio": 25,
            },
          },
          "type": "IDashboardLayoutItem",
          "widget": {
            "description": "",
            "drills": [],
            "ignoreDashboardFilters": [],
            "insight": {
              "identifier": "tableInsight",
            },
            "ref": {
              "identifier": "widget1",
            },
            "title": "Table widget",
            "type": "insight",
          },
        },
        {
          "size": {
            "xl": {
              "gridWidth": 12,
              "heightAsRatio": 50,
            },
          },
          "type": "IDashboardLayoutItem",
          "widget": {
            "description": "",
            "drills": [],
            "ignoreDashboardFilters": [],
            "insight": {
              "identifier": "barInsight",
            },
            "ref": {
              "identifier": "widget2",
            },
            "title": "Bar widget",
            "type": "insight",
          },
        },
        {
          "size": {
            "xl": {
              "gridWidth": 12,
              "heightAsRatio": 50,
            },
          },
          "type": "IDashboardLayoutItem",
          "widget": {
            "description": "",
            "drills": [],
            "ignoreDashboardFilters": [],
            "insight": {
              "identifier": "columnInsight",
            },
            "ref": {
              "identifier": "widget3",
            },
            "title": "Column widget",
            "type": "insight",
          },
        },
      ],
      "type": "IDashboardLayoutSection",
    },
    {
      "items": [
        {
          "size": {
            "xl": {
              "gridWidth": 2,
              "heightAsRatio": 25,
            },
          },
          "type": "IDashboardLayoutItem",
          "widget": {
            "description": "",
            "drills": [],
            "ignoreDashboardFilters": [],
            "insight": {
              "identifier": "tableInsight",
            },
            "ref": {
              "identifier": "widget4",
            },
            "title": "Table widget 2",
            "type": "insight",
          },
        },
      ],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;

exports[`DashboardLayoutBuilder > should resize items with particular insight > before 1`] = `
{
  "sections": [
    {
      "items": [
        {
          "size": {
            "xl": {
              "gridWidth": 12,
              "heightAsRatio": 50,
            },
          },
          "type": "IDashboardLayoutItem",
          "widget": {
            "description": "",
            "drills": [],
            "ignoreDashboardFilters": [],
            "insight": {
              "identifier": "tableInsight",
            },
            "ref": {
              "identifier": "widget1",
            },
            "title": "Table widget",
            "type": "insight",
          },
        },
        {
          "size": {
            "xl": {
              "gridWidth": 12,
              "heightAsRatio": 50,
            },
          },
          "type": "IDashboardLayoutItem",
          "widget": {
            "description": "",
            "drills": [],
            "ignoreDashboardFilters": [],
            "insight": {
              "identifier": "barInsight",
            },
            "ref": {
              "identifier": "widget2",
            },
            "title": "Bar widget",
            "type": "insight",
          },
        },
        {
          "size": {
            "xl": {
              "gridWidth": 12,
              "heightAsRatio": 50,
            },
          },
          "type": "IDashboardLayoutItem",
          "widget": {
            "description": "",
            "drills": [],
            "ignoreDashboardFilters": [],
            "insight": {
              "identifier": "columnInsight",
            },
            "ref": {
              "identifier": "widget3",
            },
            "title": "Column widget",
            "type": "insight",
          },
        },
      ],
      "type": "IDashboardLayoutSection",
    },
    {
      "items": [
        {
          "size": {
            "xl": {
              "gridWidth": 12,
              "heightAsRatio": 50,
            },
          },
          "type": "IDashboardLayoutItem",
          "widget": {
            "description": "",
            "drills": [],
            "ignoreDashboardFilters": [],
            "insight": {
              "identifier": "tableInsight",
            },
            "ref": {
              "identifier": "widget4",
            },
            "title": "Table widget 2",
            "type": "insight",
          },
        },
      ],
      "type": "IDashboardLayoutSection",
    },
  ],
  "type": "IDashboardLayout",
}
`;
